# -last_five_surgeries

./: README.md  pyproject.toml
last_five_surgeries/: main.py
src/: utils.py
src/last_five_surgeries/: main.py  setting.py
tests/: conftest.py  test_get_information.py  test_get_last_five_operation.py  test_get_report.py  test_sort_by_date.py  test_sort_by_executed.py  test_sort_by_executed_and_date.py
