[tool.poetry]
name = "last-five-surgeries"
version = "0.1.0"
description = ""
authors = ["Alexandr Zubarev <zualvi@yandex.ru>"]
readme = "README.md"
packages = [{include = "last_five_surgeries"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
